save_trial_parameters

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     roi_radius: 150,
     time_to_saccade: 1000,
     validation_duration: 2000,
-    save_trial_params: [
+    save_trial_parameters: [
       { validation_points: true }
     ],
     data: {
