add more timeline vars

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
     },
     data: {
       clicks: jsPsych.timelineVariable('clicks'),
-      pattern: jsPsych.timelineVariable('pattern')
+      pattern: jsPsych.timelineVariable('pattern'),
+      calibration_points: jsPsych.timelineVariable('calibration_points'),
+      repetitions_per_point: jsPsych.timelineVariable('repetitions_per_point')
     }
   }
 
